[package]
name = "worf-launcher"
version = "0.7.2"
edition = "2024"

description = "Wayland application launcher inspired by wofi, rofi, and walker. Written in Rust with GTK4, supporting multiple modes (math, drun, file, ssh, run, emoji, search, auto), modern theming, and high performance."
keywords = ["wayland", "gtk4", "wofi", "rofi", "application-launcher"]
license = "GPL-3.0-or-later"
repository = "https://github.com/alexmohr/worf"
documentation = "https://alexmohr.github.io/worf"
homepage = "https://github.com/alexmohr/worf"
readme = "../README.md"

[lints.clippy]
# enable pedantic
pedantic = { level = "warn", priority = -1 }
## exclude some too pedantic lints for now
similar_names = "allow"

# additional lints
clone_on_ref_ptr = "warn"

[lib]
name = "worf"
path = "src/mod.rs"

[[bin]]
name = "worf"
path = "src/main.rs"

[features]
default = []

[package.metadata.deb]
maintainer = "Alexander Mohr"

[package.metadata.docs.rs]
no-deps = true

[dependencies]
gtk4 = { version = "0.9.5", default-features = true, features = ["v4_6"] }
gtk4-layer-shell = "0.5.0"
gdk4 = "0.9.6"
env_logger = "0.11.8"
log = "0.4.27"
regex = "1.11.1"
clap = { version = "4.5.38", features = ["derive"] }
freedesktop-icons = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
serde_json = "1.0.140"
crossbeam = "0.8.4"
libc = "0.2.171"
freedesktop-file-parser = "0.3.1"
strsim = "0.11.1"
dirs = "6.0.0"
which = "7.0.3"
tree_magic_mini = "3.1.6"
rayon = "1.10.0"
nix = { version = "0.30.0", features = ["process"] }
emoji = "0.2.1"
wl-clipboard-rs = "0.9.2"
notify-rust = "4.11.7"
thiserror = "2.0.12"
urlencoding = "2.1.3"
dashmap = "7.0.0-rc2"
